--- a/appconf/cluster.json.mustache
+++ b/appconf/cluster.json.mustache
@@ -7,7 +7,7 @@
         "container": {
             "type": "lxc",
             "zone": "pek3a",
-            "image": "img-0huxpbda"
+            "image": "img-c1tbhzaa"
         },
         "count": {{cluster.etcd_node.count}},
         "instance_class": {{cluster.etcd_node.instance_class}},
@@ -36,7 +36,7 @@
             },
             "compact": {
               "type": "custom",
-              "cmd": "/usr/local/bin/etcdmanager compact",
+              "cmd": "/usr/local/bin/compact.sh",
               "timeout": 86400
             }
         },
@@ -196,7 +196,7 @@
         "container": {
             "type": "lxc",
             "zone": "pek3a",
-            "image": "img-pwohbche"
+            "image": "img-c1tbhzaa"
         },
         "count": {{cluster.etcd_proxy.count}},
         "instance_class": {{cluster.etcd_proxy.instance_class}},
