--- a/appconf/cluster.json.mustache
+++ b/appconf/cluster.json.mustache
@@ -7,7 +7,7 @@
         "container": {
             "type": "lxc",
             "zone": "pek3a",
-            "image": "img-5g8yjd9u"
+            "image": "img-5zwctyih"
         },
         "count": {{cluster.etcd_node.count}},
         "instance_class": {{cluster.etcd_node.instance_class}},
@@ -196,7 +196,7 @@
         "container": {
             "type": "lxc",
             "zone": "pek3a",
-            "image": "img-5g8yjd9u"
+            "image": "img-5zwctyih"
         },
         "count": {{cluster.etcd_proxy.count}},
         "instance_class": {{cluster.etcd_proxy.instance_class}},
