--- a/roles/etcd-service/files/confd/templates/etcd.conf.tmpl
+++ b/roles/etcd-service/files/confd/templates/etcd.conf.tmpl
@@ -1,7 +1,7 @@
 # [member]
 UNIQUESID={{getv "/host/sid"}}
 ETCD_DATA_DIR="/var/lib/etcd/default.etcd"
-
+ETCD_BACKUP_DIR="/var/lib/etcd/ETCD.BACKUP"
 ETCD_LISTEN_PEER_URLS="http://0.0.0.0:2380"
 ETCD_LISTEN_CLIENT_URLS="http://0.0.0.0:2379"
 #
