--- a/roles/etcd-service/files/confd/templates/etcd.conf.tmpl
+++ b/roles/etcd-service/files/confd/templates/etcd.conf.tmpl
@@ -38,8 +38,14 @@ ETCD_INITIAL_CLUSTER_TOKEN="{{getv "/cluster/cluster_id"}}"
 
 ETCD_INITIAL_CLUSTER_STATE=new
 ETCDCTL_ENDPOINTS={{range $index,$dir := lsdir "/hosts/etcd_node"}}{{$sid := printf "/hosts/etcd_node/%s/sid" $dir}}{{$ip := printf "/hosts/etcd_node/%s/ip" $dir}}{{if $index}},http://{{getv $ip}}:2379{{else}}http://{{getv $ip}}:2379{{end}}{{end}}
-{{$newhosts := lsdir "/adding-hosts"}}ADDING_HOST_NUM={{len $newhosts}}
+{{$newhosts := lsdir "/adding-hosts/etcd_node"}}ADDING_HOST_NUM={{len $newhosts}}
 
 {{$hosts := lsdir "/hosts/etcd_node"}}{{range $index,$host:= $hosts}}{{$ip := printf "/hosts/etcd_node/%s/ip" $host}}
 HOST_{{$index}}={{getv $ip}}{{end}}
 HOST_NUM={{len $hosts}}
+
+{{$delhosts := lsdir "/deleting-hosts/etcd_node"}}DELETING_HOST_NUM={{len $delhosts}}
+{{range $index,$host:= $delhosts}}{{$ip := printf "/hosts/etcd_node/%s/ip" $host}}
+DELETING_HOST_{{$index}}={{getv $ip}}{{end}}
+
+ROLE={{getv "/host/role"}}
