move to appcenter

--- a/appconf/cluster.json.mustache
+++ b/appconf/cluster.json.mustache
@@ -9,7 +9,7 @@
         "container": {
             "type": "lxc",
             "zone": "pek3a",
-            "image": "img-ycml0sju"
+            "image": "img-xw060x8c"
         },
         "loadbalancer": {{cluster.etcd_node.loadbalancer}},
         "count": {{cluster.etcd_node.count}},
@@ -221,7 +221,7 @@
         "container": {
             "type": "lxc",
             "zone": "pek3a",
-            "image": "img-xznk20m7"
+            "image": "img-xf2259da"
         },
         "count": {{cluster.etcd_proxy.count}},
         "instance_class": {{cluster.etcd_proxy.instance_class}},
