Add parameter ETCD_QUOTA_BYTES

--- a/ansible/files/etc/confd/templates/02.app.env.tmpl
+++ b/ansible/files/etc/confd/templates/02.app.env.tmpl
@@ -16,6 +16,7 @@ DELETED_NODES_DESC_EOF
 changedVariables=$(updateAndCompareFile /opt/app/bin/.env << APP_ENV_FILE
 CLUSTER_ID={{ getv "/cluster/cluster_id" }}
 ETCD_COMPACT_INTERVAL={{ getv "/env/etcautocompact" "0" }}
+ETCD_QUOTA_BYTES={{ getv "/env/etcd.quota.backend.bytes" "2147483648" }}
 MY_ROLE={{ $myRole }}
 MY_SID={{ $mySid }}
 MY_IP={{ getv "/host/ip" }}
