--- a/app/cluster.json.mustache
+++ b/app/cluster.json.mustache
@@ -5,15 +5,15 @@
   "incremental_backup_supported": false,
   "backup_policy": "device",
   "advanced_actions": [ "scale_horizontal" ],
-  "upgrade_policy": [ "appv-yycc2fun" ],
+  "upgrade_policy": [ "appv-7izgt3gc" ],
   "upgrading_policy": "sequential",
   "multi_zone_policy": "round_robin",
   "nodes": [{
     "role": "etcd_node",
     "container": {
       "type": "kvm",
-      "zone": "pek3a",
-      "image": "img-7gi225x6"
+      "zone": "sh1",
+      "image": "img-l1sksi5f"
     },
     "count": {{cluster.etcd_node.count}},
     "instance_class": {{cluster.etcd_node.instance_class}},
@@ -71,7 +71,8 @@
       }
     },
     "env": {
-      "etcautocompact": {{env.etcd_node.autocompact}}
+      "etcautocompact": {{env.etcd_node.autocompact}},
+      "etcd.quota.backend.bytes": {{env.etcd_node.quotabytes}}
     },
     "monitor": {
       "enable": true,
@@ -111,8 +112,8 @@
     "role": "etcd_proxy",
     "container": {
       "type": "kvm",
-      "zone": "pek3a",
-      "image": "img-7gi225x6"
+      "zone": "sh1",
+      "image": "img-l1sksi5f"
     },
     "count": {{cluster.etcd_proxy.count}},
     "instance_class": {{cluster.etcd_proxy.instance_class}},
