init branch etcdv3.3.25

--- a/app/cluster.json.mustache
+++ b/app/cluster.json.mustache
@@ -5,7 +5,7 @@
   "incremental_backup_supported": false,
   "backup_policy": "device",
   "advanced_actions": [ "scale_horizontal" ],
-  "upgrade_policy": [ "appv-7izgt3gc" ],
+  "upgrade_policy": [ "appv-7izgt3gc", "appv-qva7oqcc" ],
   "upgrading_policy": "sequential",
   "multi_zone_policy": "round_robin",
   "nodes": [{
@@ -13,7 +13,7 @@
     "container": {
       "type": "kvm",
       "zone": "sh1",
-      "image": "img-l1sksi5f"
+      "image": "img-wdk9zfh2"
     },
     "count": {{cluster.etcd_node.count}},
     "instance_class": {{cluster.etcd_node.instance_class}},
@@ -47,7 +47,7 @@
         "timeout": 100
       },
       "upgrade": {
-        "cmd": "/opt/app/bin/ctl.sh init"
+        "cmd": "/opt/app/bin/ctl.sh upgrade"
       },
       "backup": {
         "nodes_to_execute_on": 1,
@@ -113,7 +113,7 @@
     "container": {
       "type": "kvm",
       "zone": "sh1",
-      "image": "img-l1sksi5f"
+      "image": "img-wdk9zfh2"
     },
     "count": {{cluster.etcd_proxy.count}},
     "instance_class": {{cluster.etcd_proxy.instance_class}},
@@ -133,7 +133,7 @@
         "cmd": "/opt/app/bin/ctl.sh stop"
       },
       "upgrade": {
-        "cmd": "/opt/app/bin/ctl.sh init"
+        "cmd": "/opt/app/bin/ctl.sh upgrade"
       }
     }
   }],
