--- a/ansible/files/etc/confd/templates/02.app.env.tmpl
+++ b/ansible/files/etc/confd/templates/02.app.env.tmpl
@@ -17,6 +17,9 @@ changedVariables=$(updateAndCompareFile /opt/app/bin/.env << APP_ENV_FILE
 CLUSTER_ID={{ getv "/cluster/cluster_id" }}
 ETCD_COMPACT_INTERVAL={{ getv "/env/etcautocompact" "0" }}
 ETCD_QUOTA_BYTES={{ getv "/env/etcd.quota.backend.bytes" "2147483648" }}
+# ETCD_AUTO_COMPACTION_MODE="periodic"
+# ETCD_MAX_REQUEST_BYTES=1572864
+# ETCD_ENABLE_V2="true"
 MY_ROLE={{ $myRole }}
 MY_SID={{ $mySid }}
 MY_IP={{ getv "/host/ip" }}
