--- a/app/cluster.json.mustache
+++ b/app/cluster.json.mustache
@@ -13,7 +13,7 @@
     "container": {
       "type": "kvm",
       "zone": "sh1",
-      "image": "img-wdk9zfh2"
+      "image": "img-hodn1ztr"
     },
     "count": {{cluster.etcd_node.count}},
     "instance_class": {{cluster.etcd_node.instance_class}},
@@ -113,7 +113,7 @@
     "container": {
       "type": "kvm",
       "zone": "sh1",
-      "image": "img-wdk9zfh2"
+      "image": "img-hodn1ztr"
     },
     "count": {{cluster.etcd_proxy.count}},
     "instance_class": {{cluster.etcd_proxy.instance_class}},
