--- a/app/cluster.json.mustache
+++ b/app/cluster.json.mustache
@@ -5,15 +5,15 @@
   "incremental_backup_supported": false,
   "backup_policy": "device",
   "advanced_actions": [ "scale_horizontal" ],
-  "upgrade_policy": [ "appv-7izgt3gc", "appv-qva7oqcc" ],
+  "upgrade_policy": ["appv-9ag876uk"],
   "upgrading_policy": "sequential",
   "multi_zone_policy": "round_robin",
   "nodes": [{
     "role": "etcd_node",
     "container": {
       "type": "kvm",
-      "zone": "sh1",
-      "image": "img-hodn1ztr"
+      "zone": "pek3",
+      "image": "img-p0d6vb38"
     },
     "count": {{cluster.etcd_node.count}},
     "instance_class": {{cluster.etcd_node.instance_class}},
@@ -113,8 +113,8 @@
     "role": "etcd_proxy",
     "container": {
       "type": "kvm",
-      "zone": "sh1",
-      "image": "img-hodn1ztr"
+      "zone": "pek3",
+      "image": "img-p0d6vb38"
     },
     "count": {{cluster.etcd_proxy.count}},
     "instance_class": {{cluster.etcd_proxy.instance_class}},
