--- a/app/cluster.json.mustache
+++ b/app/cluster.json.mustache
@@ -12,8 +12,8 @@
     "role": "etcd_node",
     "container": {
       "type": "kvm",
-      "zone": "sh1",
-      "image": "img-hodn1ztr"
+      "zone": "pek3",
+      "image": "img-xlg6agn2"
     },
     "count": {{cluster.etcd_node.count}},
     "instance_class": {{cluster.etcd_node.instance_class}},
@@ -113,8 +113,8 @@
     "role": "etcd_proxy",
     "container": {
       "type": "kvm",
-      "zone": "sh1",
-      "image": "img-hodn1ztr"
+      "zone": "pek3",
+      "image": "img-xlg6agn2"
     },
     "count": {{cluster.etcd_proxy.count}},
     "instance_class": {{cluster.etcd_proxy.instance_class}},
