update app's img and zone

--- a/app/cluster.json.mustache
+++ b/app/cluster.json.mustache
@@ -13,7 +13,7 @@
     "container": {
       "type": "kvm",
       "zone": "pek3",
-      "image": "img-xlg6agn2"
+      "image": "img-cgglncyz"
     },
     "count": {{cluster.etcd_node.count}},
     "instance_class": {{cluster.etcd_node.instance_class}},
@@ -114,7 +114,7 @@
     "container": {
       "type": "kvm",
       "zone": "pek3",
-      "image": "img-xlg6agn2"
+      "image": "img-cgglncyz"
     },
     "count": {{cluster.etcd_proxy.count}},
     "instance_class": {{cluster.etcd_proxy.instance_class}},
