--- a/app/cluster.json.mustache
+++ b/app/cluster.json.mustache
@@ -5,7 +5,7 @@
   "incremental_backup_supported": false,
   "backup_policy": "device",
   "advanced_actions": [ "scale_horizontal" ],
-  "upgrade_policy": ["appv-9ag876uk"],
+  "upgrade_policy": [],
   "upgrading_policy": "sequential",
   "multi_zone_policy": "round_robin",
   "nodes": [{
@@ -13,7 +13,7 @@
     "container": {
       "type": "kvm",
       "zone": "pek3",
-      "image": "img-p0d6vb38"
+      "image": "img-p2ls6ggy"
     },
     "count": {{cluster.etcd_node.count}},
     "instance_class": {{cluster.etcd_node.instance_class}},
@@ -114,7 +114,7 @@
     "container": {
       "type": "kvm",
       "zone": "pek3",
-      "image": "img-p0d6vb38"
+      "image": "img-p2ls6ggy"
     },
     "count": {{cluster.etcd_proxy.count}},
     "instance_class": {{cluster.etcd_proxy.instance_class}},
