--- a/app/cluster.json.mustache
+++ b/app/cluster.json.mustache
@@ -73,7 +73,8 @@
     },
     "env": {
       "etcautocompact": {{env.etcd_node.autocompact}},
-      "etcd.quota.backend.bytes": {{env.etcd_node.quotabytes}}
+      "etcd.quota.backend.bytes": {{env.etcd_node.quotabytes}},
+      "nodeexporter": {{env.etcd_node.nodeexporter}}
     },
     "monitor": {
       "enable": true,
