update cluster.json.mustache's zone

--- a/app/cluster.json.mustache
+++ b/app/cluster.json.mustache
@@ -12,8 +12,8 @@
     "role": "etcd_node",
     "container": {
       "type": "kvm",
-      "zone": "pek3",
-      "image": "img-1m35cgd3"
+      "zone": "sh1",
+      "image": "img-68uboyts"
     },
     "count": {{cluster.etcd_node.count}},
     "instance_class": {{cluster.etcd_node.instance_class}},
@@ -114,8 +114,8 @@
     "role": "etcd_proxy",
     "container": {
       "type": "kvm",
-      "zone": "pek3",
-      "image": "img-1m35cgd3"
+      "zone": "sh1",
+      "image": "img-68uboyts"
     },
     "count": {{cluster.etcd_proxy.count}},
     "instance_class": {{cluster.etcd_proxy.instance_class}},
