--- a/app/cluster.json.mustache
+++ b/app/cluster.json.mustache
@@ -13,7 +13,7 @@
     "container": {
       "type": "kvm",
       "zone": "pek3",
-      "image": "img-p2ls6ggy"
+      "image": "img-s11flpjq"
     },
     "count": {{cluster.etcd_node.count}},
     "instance_class": {{cluster.etcd_node.instance_class}},
@@ -73,7 +73,8 @@
     },
     "env": {
       "etcautocompact": {{env.etcd_node.autocompact}},
-      "etcd.quota.backend.bytes": {{env.etcd_node.quotabytes}}
+      "etcd.quota.backend.bytes": {{env.etcd_node.quotabytes}},
+      "nodeexporter": {{env.etcd_node.nodeexporter}}
     },
     "monitor": {
       "enable": true,
@@ -114,7 +115,7 @@
     "container": {
       "type": "kvm",
       "zone": "pek3",
-      "image": "img-p2ls6ggy"
+      "image": "img-s11flpjq"
     },
     "count": {{cluster.etcd_proxy.count}},
     "instance_class": {{cluster.etcd_proxy.instance_class}},
