--- a/app/cluster.json.mustache
+++ b/app/cluster.json.mustache
@@ -5,7 +5,7 @@
   "incremental_backup_supported": false,
   "backup_policy": "device",
   "advanced_actions": [ "scale_horizontal" ],
-  "upgrade_policy": ["appv-u2me89o5","appv-fpqnuucx"],
+  "upgrade_policy": ["appv-u2me89o5","appv-fpqnuucx","appv-q98yvbp3"],
   "upgrading_policy": "sequential",
   "multi_zone_policy": "round_robin",
   "nodes": [{
@@ -13,7 +13,7 @@
     "container": {
       "type": "kvm",
       "zone": "pek3",
-      "image": "img-n613udgc"
+      "image": "img-0u5st8e7"
     },
     "count": {{cluster.etcd_node.count}},
     "instance_class": {{cluster.etcd_node.instance_class}},
@@ -115,7 +115,7 @@
     "container": {
       "type": "kvm",
       "zone": "pek3",
-      "image": "img-n613udgc"
+      "image": "img-0u5st8e7"
     },
     "count": {{cluster.etcd_proxy.count}},
     "instance_class": {{cluster.etcd_proxy.instance_class}},
@@ -138,6 +138,9 @@
         "post_start_service": true,
         "cmd": "/opt/app/bin/ctl.sh upgrade"
       }
+    },
+    "env": {
+         "nodeexporter": {{env.etcd_node.nodeexporter}}
     }
   }],
   "health_check": {
