update  upgrade_policy  id

--- a/app/cluster.json.mustache
+++ b/app/cluster.json.mustache
@@ -5,7 +5,7 @@
   "incremental_backup_supported": false,
   "backup_policy": "device",
   "advanced_actions": [ "scale_horizontal" ],
-  "upgrade_policy": [ "appv-7izgt3gc", "appv-qva7oqcc","appv-u2me89o5" ],
+  "upgrade_policy": ["appv-u2me89o5","appv-fpqnuucx","appv-mclc6o8a","appv-q98yvbp3"],
   "upgrading_policy": "sequential",
   "multi_zone_policy": "round_robin",
   "nodes": [{
