--- a/app/cluster.json.mustache
+++ b/app/cluster.json.mustache
@@ -75,7 +75,9 @@
     "env": {
       "etcautocompact": {{env.etcd_node.autocompact}},
       "etcd.quota.backend.bytes": {{env.etcd_node.quotabytes}},
-      "nodeexporter": {{env.etcd_node.nodeexporter}}
+      "nodeexporter": {{env.etcd_node.nodeexporter}},
+      "etcdrootauth": {{env.etcd_node.etcdrootauth}},
+      "etcdrootpassword": {{env.etcd_node.etcdrootpassword}}
     },
     "monitor": {
       "enable": true,
