update etcdrootpassword var

--- a/app/cluster.json.mustache
+++ b/app/cluster.json.mustache
@@ -93,7 +93,7 @@
       "etcd.quota.backend.bytes": {{env.etcd_node.quotabytes}},
       "nodeexporter": {{env.etcd_node.nodeexporter}},
       "etcdrootauth": {{env.etcd_node.etcdrootauth}},
-      "etcdrootpassword": {{env.etcd_node.etcdrootpassword}}
+      "etcdrootpasswd": {{env.etcd_node.etcdrootpasswd}}
     },
     "monitor": {
       "enable": true,
