Add TLS function and Optimize existing functions

--- a/ansible/files/etc/confd/templates/02.app.env.tmpl
+++ b/ansible/files/etc/confd/templates/02.app.env.tmpl
@@ -5,9 +5,33 @@ addedNodes="$(sort -V - << ADDED_NODES_ASC_EOF
 {{- end }}
 ADDED_NODES_ASC_EOF
 )"
+addedNodesDomain="$(sort -V - << ADDED_NODES_ASC_EOF
+{{- range $addedInstances }}
+{{ getv (printf "/adding-hosts/etcd_node/%s/sid" .) }}=etcd{{ getv (printf "/hosts/etcd_node/%s/sid" .) }}{{ $clusterDNS }}
+{{- end }}
+ADDED_NODES_ASC_EOF
+)"
+addedNodesHostsDomainName="$(sort -V - << ADDED_NODES_ASC_EOF
+{{- range $addedInstances }}
+{{ getv (printf "/adding-hosts/etcd_node/%s/ip" .) }}  etcd{{ getv (printf "/hosts/etcd_node/%s/sid" .) }}{{ $clusterDNS }}
+{{- end }}
+ADDED_NODES_ASC_EOF
+)"
 deletedNodes="$(sort -Vr - << DELETED_NODES_DESC_EOF
 {{- range $deletedInstances }}
 {{ getv (printf "/deleting-hosts/etcd_node/%s/sid" .) }}={{ getv (printf "/deleting-hosts/etcd_node/%s/ip" .) }}
+{{- end }}
+DELETED_NODES_DESC_EOF
+)"
+deletedNodesDomain="$(sort -Vr - << DELETED_NODES_DESC_EOF
+{{- range $deletedInstances }}
+{{ getv (printf "/deleting-hosts/etcd_node/%s/sid" .) }}=etcd{{ getv (printf "/hosts/etcd_node/%s/sid" .) }}{{ $clusterDNS }}
+{{- end }}
+DELETED_NODES_DESC_EOF
+)"
+deletedNodesHostsDomain="$(sort -Vr - << DELETED_NODES_DESC_EOF
+{{- range $deletedInstances }}
+{{ getv (printf "/deleting-hosts/etcd_node/%s/ip" .) }}  etcd{{ getv (printf "/hosts/etcd_node/%s/sid" .) }}{{ $clusterDNS }}
 {{- end }}
 DELETED_NODES_DESC_EOF
 )"
@@ -17,17 +41,29 @@ changedVariables=$(updateAndCompareFile /opt/app/bin/.env << APP_ENV_FILE
 CLUSTER_ID={{ getv "/cluster/cluster_id" }}
 ETCD_COMPACT_INTERVAL={{ getv "/env/etcautocompact" "0" }}
 ETCD_QUOTA_BYTES={{ getv "/env/etcd.quota.backend.bytes" "2147483648" }}
+ETCD_HEARTBEAT_INTERVAL={{ getv "/env/etcdheartbeatinterval" "100" }}
+ETCD_ELECTION_TIMEOUT={{ getv "/env/etcdelectiontimeout" "1000" }}
 ETCD_AUTO_COMPACTION_MODE="periodic"
 # ETCD_MAX_REQUEST_BYTES=1572864
 ETCD_ENABLE_V2="true"
+ETCD_ENABLE_TLS={{ $enableTLS }}
 MY_ROLE={{ $myRole }}
 MY_SID={{ $mySid }}
 MY_IP={{ getv "/host/ip" }}
+ETCD_CLUSTER_DNS={{ $clusterDNS }}
 STABLE_NODES="$(echo $stableNodes)"
+STABLE_NODES_DOMAIN_NAME="$(echo $stableNodesDomainName)"
+HOSTS_DOMAIN_NAME="$(echo $hostsDomainName)"
+PROXY_HOSTS_DOMAIN_NAME="$(echo $proxyHostsDomainName)"
 {{- if eq $myRole "etcd-node" }}
 ADDED_NODES="$(echo $addedNodes)"
+ADDED_NODES_DOMAIN="$(echo $addedNodesDomain)"
+ADDED_NODES_HOSTS_DOMAIN="$(echo $addedNodesHostsDomainName)"
 DELETED_NODES="$(echo $deletedNodes)"
+DELETED_NODES_DOMAIN="$(echo $deletedNodesDomain)"
+DELETED_NODES_HOSTS_DOMAIN="$(echo $deletedNodesHostsDomain)"
 ALL_NODES="$(echo $allNodes)"
+ALL_NODES_DOMAIN="$(echo $allNodesDomain)"
 IS_ADDED={{ $isAdded }}
 IS_DELETED={{ $isDeleted }}
 {{- end }}
