--- a/ansible/files/etc/confd/templates/01.header.sh.tmpl
+++ b/ansible/files/etc/confd/templates/01.header.sh.tmpl
@@ -6,9 +6,14 @@ set -e
 {{- $myRole := replace (getv "/host/role") "_" "-" -1 }}
 {{- $mySid := getv "/host/sid" }}
 {{- $myIp := getv "/host/ip" }}
+{{- $clusterDNS := getv "/env/cluster_DNS" ".etcdsvc.common" }}
+
 
 {{- $addedInstances := ls "/adding-hosts/etcd_node" }}
 {{- $deletedInstances := ls "/deleting-hosts/etcd_node" }}
+
+{{- $addedProxyInstances := ls "/adding-hosts/etcd_proxy" }}
+{{- $deletedProxyInstances := ls "/deleting-hosts/etcd_proxy" }}
 
 {{- $isAdded := eq (len ($addedInstances | filter (getv "/host/instance_id"))) 1 }}
 {{- $isDeleted := eq (len ($deletedInstances | filter (getv "/host/instance_id"))) 1 }}
@@ -28,8 +33,14 @@ map() {
   done
 }
 
+{{- $enableTLS := getv "/env/enable_TLS" }}
+
 buildEndpoint() {
-  echo -n http://${1#*=}:2379
+  {{- if eq "true" $enableTLS }}
+   echo -n https://${1#*=}:2379
+  {{- else }}
+   echo -n http://${1#*=}:2379
+  {{- end }}
 }
 
 allNodes="$(sort -V - << ALL_NODES_EOF
@@ -38,6 +49,14 @@ allNodes="$(sort -V - << ALL_NODES_EOF
 {{- end }}
 ALL_NODES_EOF
 )"
+allNodesDomain="$(sort -V - << ALL_NODES_EOF
+{{- range ls "/hosts/etcd_node" }}
+{{ getv (printf "/hosts/etcd_node/%s/sid" .) }}=etcd{{ getv (printf "/hosts/etcd_node/%s/sid" .) }}{{ $clusterDNS }}
+{{- end }}
+ALL_NODES_EOF
+)"
+
+
 
 stableNodes="$(sort -V - << STABLE_NODES_EOF
 {{- range ls "/hosts/etcd_node" }}
@@ -51,3 +70,41 @@ STABLE_NODES_EOF
 )"
 stableEndpointLines=$(map buildEndpoint "$stableNodes")
 stableEndpoints=$(echo $stableEndpointLines | tr " " ",")
+
+
+stableNodesDomainName="$(sort -V - << STABLE_NODES_EOF
+{{- range ls "/hosts/etcd_node" }}
+  {{- if not (len ($addedInstances | filter .)) }}
+    {{- if not (len ($deletedInstances | filter .)) }}
+      {{ getv (printf "/hosts/etcd_node/%s/sid" .) }}=etcd{{ getv (printf "/hosts/etcd_node/%s/sid" .) }}{{ $clusterDNS }}
+    {{- end }}
+  {{- end }}
+{{- end }}
+STABLE_NODES_EOF
+)"
+
+
+hostsDomainName="$(sort -V - << STABLE_NODES_EOF
+{{- range ls "/hosts/etcd_node" }}
+  {{- if not (len ($addedInstances | filter .)) }}
+    {{- if not (len ($deletedInstances | filter .)) }}
+      {{ getv (printf "/hosts/etcd_node/%s/ip" .) }}  etcd{{ getv (printf "/hosts/etcd_node/%s/sid" .) }}{{ $clusterDNS }}
+    {{- end }}
+  {{- end }}
+{{- end }}
+STABLE_NODES_EOF
+)"
+
+
+proxyHostsDomainName="$(sort -V - << STABLE_NODES_EOF
+{{- range ls "/hosts/etcd_proxy" }}
+        {{ getv (printf "/hosts/etcd_proxy/%s/ip" .) }}  proxy{{ getv (printf "/hosts/etcd_proxy/%s/sid" .) }}{{ $clusterDNS }}
+{{- end }}
+STABLE_NODES_EOF
+)"
+
+
+
+
+
+
