--- a/ansible/files/etc/confd/templates/02.app.env.tmpl
+++ b/ansible/files/etc/confd/templates/02.app.env.tmpl
@@ -35,7 +35,14 @@ deletedNodesHostsDomain="$(sort -Vr - << DELETED_NODES_DESC_EOF
 {{- end }}
 DELETED_NODES_DESC_EOF
 )"
+deletedProxyHostsDomain="$(sort -Vr - << DELETED_PROXY_DESC_EOF
+{{- range $deletedProxyInstances }}
+{{ getv (printf "/deleting-hosts/etcd_proxy/%s/ip" .) }}  proxy{{ getv (printf "/hosts/etcd_proxy/%s/sid" .) }}{{ $clusterDNS }}
 {{- end }}
+DELETED_PROXY_DESC_EOF
+)"
+{{- end }}
+
 
 changedVariables=$(updateAndCompareFile /opt/app/bin/.env << APP_ENV_FILE
 CLUSTER_ID={{ getv "/cluster/cluster_id" }}
@@ -62,6 +69,7 @@ ADDED_NODES_HOSTS_DOMAIN="$(echo $addedNodesHostsDomainName)"
 DELETED_NODES="$(echo $deletedNodes)"
 DELETED_NODES_DOMAIN="$(echo $deletedNodesDomain)"
 DELETED_NODES_HOSTS_DOMAIN="$(echo $deletedNodesHostsDomain)"
+DELETED_PROXY_HOSTS_DOMAIN="$(echo $deletedProxyHostsDomain)"
 ALL_NODES="$(echo $allNodes)"
 ALL_NODES_DOMAIN="$(echo $allNodesDomain)"
 IS_ADDED={{ $isAdded }}
